# appunti-unifi

./: .gitignore  README.md
1 anno/: domandegeometria.tex
1 anno/Analisi/: Analisi-cheatsheet.tex  Analisi-figure0.md5  Analisi.tex
1 anno/Appunti/: fisica13-05-25.tex
1 anno/Chimica/: Chimica.tex
1 anno/Fisica/: Fisica.tex  Physics-cheatsheet.tex  compitoNov25.tex
Informatica 2024/: Update_README.sh  primo_file_in_c.c  scriptC.sh
Informatica 2024/Esercitazione/Sistema_Solare_chathpt/: CMakeLists.txt  main.c  solar_system.h
Meccanica_Analitica_26/: .gitignore  main.tex
analisi 2/: analisi2.aux  analisi2.fdb_latexmk  analisi2.fls  analisi2.ilg  analisi2.tex  cheatsheet.aux  cheatsheet.fdb_latexmk  cheatsheet.fls  esercizi.aux  esercizi.fdb_latexmk  esercizi.fls  esercizi.tex  pdflatex33174.fls  pdflatex34274.fls  pt2.aux  pt2.fdb_latexmk  pt2.fls  pt2.tex  pt2_contourtmp0.table  theory.aux  theory.fdb_latexmk  theory.fls  theory.ilg  theory.tex  theory.toc
fisica2/: fisica2.aux  fisica2.fdb_latexmk  fisica2.fls  fisica2.ilg
fluidi/: FLcomp.aux  FLcomp.fdb_latexmk  FLcomp.fls  fluidi.aux  fluidi.fdb_latexmk  fluidi.fls  pdflatex17912.fls  pt2FL.aux  pt2FL.fdb_latexmk  pt2FL.fls
lab/: Esperienze.aux  Esperienze.fdb_latexmk  Esperienze.fls  Esperienze.tex  Esperienze.toc
lab2/: lab2.aux  lab2.fdb_latexmk  lab2.fls  lab2.ilg  lab2.tex  pdflatex13006.fls
meccanica analitica/: mecAnal.aux  mecAnal.fdb_latexmk  mecAnal.fls  mecAnal.ilg  mecAnal.tex
metodi matematici/: metodi.aux  metodi.fdb_latexmk  metodi.fls  metodi.ilg  metodi.tex
(+593 files in other folders)
